Fixed filters issue and maps view

--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -1,7 +1,7 @@
 <resources>
-    <string name="app_name">sync_store</string>
-    <string name="facebook_app_id">725605769779800</string>
-<string name="facebook_client_token">30494667847a1e59fc6fd40be72a5a4b</string>
-<string name="fb_login_protocol_scheme">fb61555779496045</string>
+    <string name="app_name">Trofi</string>
+    <string name="facebook_app_id">your_facebook_app_id</string>
+<string name="facebook_client_token">your_facebook_client_token</string>
+<string name="fb_login_protocol_scheme">fb + your_facebook_app_id</string>
 
 </resources>
